feat(cmd): accept JSON parameters and parse rich types
Closes #89.

MBeanValueParser only knew primitives, their wrappers, String, BigInteger and BigDecimal, so operations and writable attributes declaring anything else could not be driven from jmxsh at all. It now falls back to Jackson, dispatching on the shape of the input: a value starting with [ or { is read as a JSON document, everything else as a JSON string. That covers java.time types, UUID, java.util.Date, enums, arrays, collections and maps, and it keeps a single deterministic attempt so the reported error is the real one. Because run and set share the parser, both gain this with no change to SetCommand.

RunCommand gains -j/--json, which takes every parameter as one JSON value. An array binds by position; an object binds by parameter name, which also disambiguates overloads. Note that a plain standard MBean does not retain declared parameter names — MBeanOperationInfo synthesises p1, p2, … — so those are the keys users write, and info -o <op> prints them.

The three places that derived arity from the positional parameter count are replaced by OperationArguments, a sealed interface over the three parameter sources. Overload resolution and parameter binding now happen once regardless of where the values came from, and a failed match lists the known signatures instead of claiming the operation does not exist.

Jackson 3 is used rather than 2.x: java.time support is built into databind, so it is a single declared dependency, and JacksonException is unchecked. The uber jar grows from 3.44 MB to 6.03 MB.

Rich types can still be refused by the target JVM, which applies a deserialisation filter to invocation arguments when started with -Dcom.sun.management.jmxremote. That is a policy of the target, not of jmxsh, and the README says how to widen it.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>